--- a/index.css
+++ b/index.css
@@ -3,3 +3,56 @@
   width: fit-content;
   color: brown;
 }
+
+
+
+.center {
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+}
+
+
+
+#searchBar {
+  border-radius: 30px;
+  border: 0.5px solid grey;
+  width: 500px;
+  height: 45px;
+  padding: 20px;
+  margin: 1em 2em;
+ 
+}
+
+
+.footer {
+  text-align: left;
+  padding: 5px;
+  background-color: floralwhite;
+  color:black;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+
+.footer{
+  display:grid; 
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.footer2{
+  text-align: center ;   
+}
+
+.footer3{
+   text-align: right;
+}
+
+
+
+
+
